test/good/generics/method02.px

class A def
    func f(x: Int) def
        return x / 4

print A().f(6).fraction
