test/bad/generators/generic03.px

func f(): Int... def
    skip

func g() def
    return f()

g()
